--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Netflix India – Watch TV Shows Online, Watch Movies Online</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="main">
